--- a/index.gmi
+++ b/index.gmi
@@ -1,3 +1,5 @@
 # repeat...
 
-Millions
+Hi there! Welcome to my little space on Gopher, hosted by none other than the fine people at => ../srht.site    Sourcehut!
+
+Not much else here right now.
